# OmilZomil-NAVYeffect

./: .env.public  .gitignore  Dockerfile  LICENSE  README.md  aaaaa.sh  build.sh  dev_shell.sh  docker-compose.dev.yml  docker-compose.server.yml  docker-compose.yml  front_build.sh  package-lock.json  package.json  reset.sh  rm_resource.sh  run_dev.sh  start.sh  stop.sh
backend/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/AI/OZEngine/lib/: utils.py
backend/WEB/: init_db.py
backend/WEB_BE/app/token/: user.py
backend/ai/OZEngine/person_detectors/: PersonDetector.py
backend/app/camera/: model.py
backend/app/token/: jwt.py
backend/deploy/: Dockerfile  dev_Dockerfile  git_pull_dev.sh  readme.md
backend/deploy/docker/: Dockerfile
backend/src/: ai  asgi.py  init_db.py  main.py
backend/src/ai/: requirements.txt  test.py
backend/src/app/: OZEngine  main.py
backend/src/app/api/: api.py  deps.py
backend/src/app/base_access/: crud.py  model.py  router.py  schema.py
backend/src/app/camera/: model.py
backend/src/app/core/: config.py  db.py
backend/src/app/crud/: base_access.py  enlisted_personnel.py  inspection_log.py  military_unit.py  rank.py  uniform.py  user.py
backend/src/app/db/: base_schema.py  init_db.py
backend/src/app/enlisted_personnel/: crud.py  model.py  router.py  schema.py
backend/src/app/models/: access_log.py  base_access.py  enlisted_personnel.py  inspection_log.py  user.py
backend/src/app/routers/: base_access.py  enlisted_personnel.py
backend/src/core/: base_schema.py  db.py  settings.py
(+547 files in other folders)
