[tool.poetry]
name = "omil"
version = "0.1.0"
description = "omilzomil"
authors = ["greenrain78 <kdwkdw0078@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
mysqlclient = "^2.1.1"
SQLAlchemy = "^1.4.41"
pytest = "^7.1.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
